--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "serve": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "rm -rf dist",
+    "reset": "rm -rf node_modules yarn.lock && yarn cache clean && yarn install",
+    "update": "yarn cache clean && yarn upgrade -L"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -14,8 +17,8 @@
     "react-router-dom": "6.16.0"
   },
   "devDependencies": {
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "18.2.23",
+    "@types/react-dom": "18.2.8",
     "@vitejs/plugin-react": "4.1.0",
     "vite": "4.4.9"
   }
